# fastapi-crud

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  makefile  pyproject.toml  start.sh
.github/workflows/: test.yml
app/: main.py
app/config/: database.py  permissions.py  settings.py
app/dependencies/: auth.py  rbac.py
app/models/: products.py  users.py
app/routers/: auth_router.py  product_router.py  router.py  user_router.py
app/schemas/: auth_schema.py  product_schema.py  user_schema.py
app/seed/: seed.py
app/services/: auth_service.py  product_service.py  user_service.py
app/utils/: security.py
scripts/: check-coverage.sh
src/app/: main.py  router.py
src/app/api/: deps.py  router.py
src/app/auth/: dependencies.py  permissions.py  rbac.py  router.py  security.py  service.py
src/app/core/: permissions.py  roles.py  security.py
src/app/db/: seed.py
src/app/models/: product.py  user.py
src/app/products/: model.py  router.py  service.py
src/app/schemas/: user.py
src/app/services/: auth.py  product.py  user.py
src/lib/: database.py  seed.py
src/scripts/: check-coverage.sh  start.sh
src/tests/: conftest.py  test_auth_dependency.py  test_health.py  test_permissions.py  test_product_service.py  test_products_api.py  test_rbac.py  test_security.py  test_seed.py  test_services.py
tests/: conftest.py  test_auth_api.py  test_auth_dependency.py  test_permissions.py  test_product_service.py  test_products_api.py  test_rbac.py  test_security.py  test_seed.py  test_services.py  test_users_api.py
(+7 files in other folders)
